# CPP-Things

./: README.md
Basic Syntax/OOP/: lambda.cpp
Basic Syntax/Pointers/: pointers.cpp  smart_pointers.cpp
BasicSyntax/ClassesAndStructs/: class.cpp  struct.cpp
BasicSyntax/FileSystem/: main.cpp  something.txt
BasicSyntax/OOP/: inheritance.cpp  lambda.cpp  templates.cpp
BasicSyntax/OOP/HeaderFiles/: CMakeLists.txt  add.cpp  add.h  main.cpp
Exercises/Enemy/: CMakeLists.txt  enemy.cpp  enemy.h  main.cpp
Exercises/Students/: CMakeLists.txt  classroom.cpp  classroom.h  file_manager.cpp  file_manager.h  main.cpp  student.cpp  student.h
Exercises/Students/Classrooms/: Class1.txt
Pointers/: pointers.cpp
